# Training-dataset-with-self-alinegnment

./: README.md  pyproject.toml
bot/: config.yaml  draf.ipynb  ia_instructions.py  protopypes.ipynb  text_extractor.py  utils.py
chroma_docs/: chroma-collections.parquet  chroma-embeddings.parquet
chroma_docs/index/: id_to_uuid_838ca447-767c-439f-9bbd-cb20ebd47962.pkl  index_metadata_838ca447-767c-439f-9bbd-cb20ebd47962.pkl  uuid_to_id_838ca447-767c-439f-9bbd-cb20ebd47962.pkl
data/: gse_2023_11_09.jsonl
