[tool.poetry]
name = "training-dataset-with-self-alinegnment"
version = "0.1.0"
description = "Training dataset based in Meta paper Self-Alignment with Instruction Backtranslation"
authors = ["Eber <laurente.eber@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30"
pyyaml = "^6.0"
termcolor = "^2.3"
emoji = "^2.5"
transformers = "^4.30"
torch = "^2.0"
langchain = "^0.0"
jsonlines = "^3.1"
tiktoken = "^0.4"
openai = "^0.27"
chromadb = "^0.3"
rich = "^13.4"
pypdf2 = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
